data/derived/sp14/progs/unify/prog4795.ml.out
Characters 91-95:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type ('a -> 'b) -> 'a -> 'b
       but an expression was expected of type ('a -> 'b) -> 'b
       The type variable 'b occurs inside 'a -> 'b
